# ascan-computacao-cognitiva

./: .gitignore  Desafio_Ascan_ComputacaoCognitiva.ipynb  README.md  data.yaml  main.py  pyproject.toml
src/: download_data.py  model_training.py  pipeline_alpr.py  predict_ocr.py  prepare_data.py
