[project]
name = "desafio-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "ultralytics>=8.4.102",
]
